[Mac] Invalidate the Touch Bar for Tab Changes

When the active tab changes, the page might not be get reloaded. As
such, we'll have to invalidate the touch bar when that happens.

Bug: 766969
Change-Id: I6cd9288966d7cd618a38709eb5e2dadcebb1a3c2
Reviewed-on: https://chromium-review.googlesource.com/677481
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503631}